Fixed spacing issue in CSS file

--- a/soph/site-specific.css
+++ b/soph/site-specific.css
@@ -1,8 +1,7 @@
 /*#region Switcher background */
 
 .uk-switcher .uk-panel {
-    background-color: 
-    #eee;
+    background-color: #eee;
     margin-top: -15px;
 }
 
